Bug 214982 - Assert when adding an attendee to a journal entry [KOGroupware::sendICalMessage, IncidenceChanger::addIncidence, KOJournalEditor::processInput]
Summary: Assert when adding an attendee to a journal entry [KOGroupware::sendICalMessa...
Status: RESOLVED FIXED
Alias: None
Product: korganizer
Classification: Applications
Component: journalview (other bugs)
Version First Reported In: SVN trunk (KDE 4)
Platform: Compiled Sources Linux
: NOR crash
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-11-17 16:10 UTC by Christophe Marin
Modified: 2009-12-08 21:37 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Christophe Marin 2009-11-17 16:10:11 UTC
Application: korganizer (4.4 pre)
KDE Version: 4.3.75 (KDE 4.3.75 (KDE 4.4 >= 20091113)) "release 4" (Compiled from sources)
Qt Version: 4.6.0
Operating System: Linux 2.6.31.5-0.1-default i686
Distribution: "openSUSE 11.2 (i586)"

What I was doing when the application crashed:
always reproducible:
- Add a new journal entry,
- Click on the Attendees tab,
- Enter an email address,
- Apply or OK.


 -- Backtrace:
Application: KOrganizer (korganizer), signal: Aborted
[KCrash Handler]
#6  0xffffe430 in __kernel_vsyscall ()
#7  0xb5b6f0cf in raise () from /lib/libc.so.6
#8  0xb5b709e7 in abort () from /lib/libc.so.6
#9  0xb6861674 in qt_message_output (msgType=QtFatalMsg, buf=0x6 <Address 0x6 out of bounds>) at global/qglobal.cpp:2226
#10 0xb6861893 in qt_message (msgType=QtFatalMsg, msg=0xb69dcb1c "ASSERT: \"%s\" in file %s, line %d", ap=0xbfa2cc74 "\334'\370\266T!\370\266/\001") at global/qglobal.cpp:2272
#11 0xb68619b8 in qFatal (msg=0xb69dcb1c "ASSERT: \"%s\" in file %s, line %d") at global/qglobal.cpp:2455
#12 0xb6861a35 in qt_assert (assertion=0xb6f827dc "incidence->type() == \"Event\" || incidence->type() == \"Todo\"", file=0xb6f82154 "/kde/src/KDE/kdepim/korganizer/kogroupware.cpp", line=303)
    at global/qglobal.cpp:1989
#13 0xb6f25db9 in KOGroupware::sendICalMessage (this=0x823ca50, parent=0x8735380, method=KCal::iTIPRequest, incidence=0x8853030, action=KOGlobals::INCIDENCEADDED, attendeeStatusChanged=false)
    at /kde/src/KDE/kdepim/korganizer/kogroupware.cpp:303
#14 0xb6f37632 in IncidenceChanger::addIncidence (this=0x8252400, incidence=0x8853030, parent=0x8735380) at /kde/src/KDE/kdepim/korganizer/incidencechanger.cpp:332
#15 0xb6ebf121 in KOJournalEditor::processInput (this=0x8735380) at /kde/src/KDE/kdepim/korganizer/kojournaleditor.cpp:167
#16 0xb6eb7172 in KOIncidenceEditor::slotButtonClicked (this=0x8735380, button=8) at /kde/src/KDE/kdepim/korganizer/koincidenceeditor.cpp:108
#17 0xb740f173 in KDialog::qt_metacall (this=0x8735380, _c=QMetaObject::InvokeMetaMethod, _id=33, _a=0xbfa2d188) at /usr/src/debug/kdelibs-4.3.75svn1048496/build/kdeui/kdialog.moc:190
#18 0xb74f4142 in KPageDialog::qt_metacall (this=0x8735380, _c=QMetaObject::InvokeMetaMethod, _id=69, _a=0xbfa2d188) at /usr/src/debug/kdelibs-4.3.75svn1048496/build/kdeui/kpagedialog.moc:70
#19 0xb6eb8a09 in KOIncidenceEditor::qt_metacall (this=0x8735380, _c=QMetaObject::InvokeMetaMethod, _id=69, _a=0xbfa2d188) at /kde/build/KDE/kdepim/korganizer/koincidenceeditor.moc:113
#20 0xb6ebf682 in KOJournalEditor::qt_metacall (this=0x8735380, _c=QMetaObject::InvokeMetaMethod, _id=69, _a=0xbfa2d188) at /kde/build/KDE/kdepim/korganizer/kojournaleditor.moc:71
#21 0xb6977aed in QMetaObject::metacall (object=0x8735380, cl=418, idx=69, argv=0xbfa2d188) at kernel/qmetaobject.cpp:237
#22 0xb69868e6 in QMetaObject::activate (sender=0x8735bf0, m=0xb6a88130, local_signal_index=0, argv=0xbfa2d188) at kernel/qobject.cpp:3274
#23 0xb698c175 in QSignalMapper::mapped (this=0x8735bf0, _t1=8) at .moc/release-shared/moc_qsignalmapper.cpp:101
#24 0xb698d41c in QSignalMapper::map (this=0x8735bf0, sender=0x870a060) at kernel/qsignalmapper.cpp:266
#25 0xb698d5fe in QSignalMapper::map (this=0x8735bf0) at kernel/qsignalmapper.cpp:257
#26 0xb698d6d0 in QSignalMapper::qt_metacall (this=0x8735bf0, _c=QMetaObject::InvokeMetaMethod, _id=4, _a=0xbfa2d318) at .moc/release-shared/moc_qsignalmapper.cpp:87
#27 0xb6977aed in QMetaObject::metacall (object=0x8735bf0, cl=418, idx=8, argv=0xbfa2d318) at kernel/qmetaobject.cpp:237
#28 0xb69868e6 in QMetaObject::activate (sender=0x870a060, m=0xb67f8a84, local_signal_index=2, argv=0xbfa2d318) at kernel/qobject.cpp:3274
#29 0xb65f17cd in QAbstractButton::clicked (this=0x870a060, _t1=false) at .moc/release-shared/moc_qabstractbutton.cpp:206
#30 0xb62c054d in QAbstractButtonPrivate::emitClicked (this=0x8749a58) at widgets/qabstractbutton.cpp:546
#31 0xb62c149b in QAbstractButtonPrivate::click (this=0x8749a58) at widgets/qabstractbutton.cpp:539
#32 0xb62c1746 in QAbstractButton::mouseReleaseEvent (this=0x870a060, e=0xbfa2d9a0) at widgets/qabstractbutton.cpp:1118
#33 0xb5f2a531 in QWidget::event (this=0x870a060, event=0xbfa2d9a0) at kernel/qwidget.cpp:7973
#34 0xb62c03e0 in QAbstractButton::event (this=0x870a060, e=0x6) at widgets/qabstractbutton.cpp:1080
#35 0xb636cdf8 in QPushButton::event (this=0x870a060, e=0xbfa2d9a0) at widgets/qpushbutton.cpp:664
#36 0xb5ecb01c in QApplicationPrivate::notify_helper (this=0x807f928, receiver=0x870a060, e=0xbfa2d9a0) at kernel/qapplication.cpp:4242
#37 0xb5ed2122 in QApplication::notify (this=0xbfa2d730, receiver=0x870a060, e=0xbfa2d9a0) at kernel/qapplication.cpp:3822
#38 0xb74b1d31 in KApplication::notify (this=0xbfa2e03c, receiver=0x870a060, event=0xbfa2d9a0) at /usr/src/debug/kdelibs-4.3.75svn1048496/kdeui/kernel/kapplication.cpp:302
#39 0xb697277e in QCoreApplication::notifyInternal (this=0xbfa2e03c, receiver=0x870a060, event=0xbfa2d9a0) at kernel/qcoreapplication.cpp:704
#40 0xb5ed1784 in QCoreApplication::sendSpontaneousEvent (receiver=0x870a060, event=0xbfa2d9a0, alienWidget=0x870a060, nativeWidget=0x8735380, buttonDown=0xb6800fe0, lastMouseReceiver=..., 
    spontaneous=true) at ../../src/corelib/kernel/qcoreapplication.h:218
#41 QApplicationPrivate::sendMouseEvent (receiver=0x870a060, event=0xbfa2d9a0, alienWidget=0x870a060, nativeWidget=0x8735380, buttonDown=0xb6800fe0, lastMouseReceiver=..., spontaneous=true)
    at kernel/qapplication.cpp:2954
#42 0xb5f5d03a in QETWidget::translateMouseEvent (this=0x8735380, event=0xbfa2deac) at kernel/qapplication_x11.cpp:4368
#43 0xb5f5c5e4 in QApplication::x11ProcessEvent (this=0xbfa2e03c, event=0xbfa2deac) at kernel/qapplication_x11.cpp:3379
#44 0xb5f8a38b in QEventDispatcherX11::processEvents (this=0x805be88, flags=...) at kernel/qeventdispatcher_x11.cpp:132
#45 0xb6970ded in QEventLoop::processEvents (this=0xbfa2dfd4, flags=) at kernel/qeventloop.cpp:149
#46 0xb6971239 in QEventLoop::exec (this=0xbfa2dfd4, flags=...) at kernel/qeventloop.cpp:201
#47 0xb69753b0 in QCoreApplication::exec () at kernel/qcoreapplication.cpp:981
#48 0xb5ecb0c4 in QApplication::exec () at kernel/qapplication.cpp:3570
#49 0x0804eb6b in main (argc=1, argv=0xbfa2e134) at /kde/src/KDE/kdepim/korganizer/main.cpp:61

Reported using DrKonqi
Comment 1 Christophe Marin 2009-11-17 16:18:04 UTC
Console output:

korganizer(373)/kdepimlibs (kabc) KABC::StdAddressBook::self: asynchronous= true                                                     
korganizer(373)/kio (KDirWatch) KDirWatchPrivate::addEntry: Added File "/home/krop/.kde/share/config/kabldaprc" NotExisting for "" ["KDirWatch-3"]                                                                                                                        
korganizer(373)/kio (KDirWatch) KDirWatchPrivate::addEntry: Added Dir "/home/krop/.kde/share/config" for "/home/krop/.kde/share/config/kabldaprc" [""]                                                                                                                    
korganizer(373)/libkdepim KPIM::KTimeEdit::setTime: KTimeEdit::setTime(): "16:02:36"                                                 
korganizer(373)/libkdepim KPIM::KTimeEdit::getTime: KTimeEdit::getTime(): "16:02:00"                                                 
korganizer(373)/kdepimlibs (kabc) KABC::StdAddressBook::self: asynchronous= true                                                     
korganizer(373)/libkdepim KPIM::KTimeEdit::getTime: KTimeEdit::getTime(): "16:02:00"                                                 
korganizer(373) IncidenceChanger::addIncidence: " "test" "                                                                           
korganizer(373)/kdepimlibs (kabc) KABC::Lock::lock: -- lock name: "/home/krop/.kde/share/apps/kabc/lock/_home_krop_.kde_share_apps_korganizer_std.ics.lock"
korganizer(373)/kdepimlibs (kabc) KABC::Lock::lock: -- lock unique name: "/home/krop/.kde/share/apps/kabc/lock/_home_krop_.kde_share_apps_korganizer_std.icsrVSgviKF"
korganizer(373)/kdepimlibs (kcal) KCal::ResourceCached::addJournal: Adding Journal on "2009-11-17T16:02:00+01:00"
korganizer(373)/kdepimlibs (kcal) KCal::ResourceCalendar::save: "Default Calendar"
korganizer(373)/kdepimlibs (kcal) KCal::FileStorage::save:
korganizer(373)/kdepimlibs (kcal) KCal::ICalFormat::save: "/home/krop/.kde/share/apps/korganizer/std.ics"
korganizer(373)/kdepimlibs (kcal) KCal::ResourceLocal::doSave: Save of  "/home/krop/.kde/share/apps/korganizer/std.ics" was  true
ASSERT: "incidence->type() == "Event" || incidence->type() == "Todo"" in file /kde/src/KDE/kdepim/korganizer/kogroupware.cpp, line 303
KCrash: Application 'korganizer' crashing...
sock_file=/home/krop/.kde/socket-mokona/kdeinit4__0
Comment 2 Christophe Marin 2009-11-17 16:24:35 UTC
the relevant entry: 

BEGIN:VJOURNAL
DTSTAMP:20091117T150800Z
ORGANIZER;CN="Christophe Giboudeaux":MAILTO:my_email@domain.tld
ATTENDEE;RSVP=TRUE;PARTSTAT=NEEDS-ACTION;ROLE=REQ-PARTICIPANT:mailto:
 attendee_email@domain.tld
CREATED:20091117T150527Z
UID:KOrganizer-887712031.325
LAST-MODIFIED:20091117T150527Z
DESCRIPTION:test
SUMMARY:test
DTSTART;TZID=Europe/Paris:20091117T160500
END:VJOURNAL
Comment 3 Allen Winter 2009-12-08 21:37:05 UTC
SVN commit 1060407 by winterz:

Don't assert when adding a new Journal with attendees.
Looks like I'm adding a new string, but I'm not: I'm reusing a string from 4.3

BUG: 214982
MERGE: e35,e4 (backporting to 4.3 isn't necessary)


 M  +5 -1      kogroupware.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1060407