Don't assert when adding a new Journal with attendees. Looks like I'm adding a new string, but I'm not: I'm reusing a string from 4.3

BUG: 214982
MERGE: e35,e4 (backporting to 4.3 isn't necessary)

svn path=/trunk/KDE/kdepim/; revision=1060407